// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselItem renders correctly with default props 1`] = `
<div>
  <div
    class="carouselItem "
  >
    <h2
      class="carouselItemTitle"
    >
      Test title
    </h2>
    <h3
      class="carouselItemSubTitle"
    />
    <img
      alt="Test title"
      class="carouselItemImage"
      src="test image"
    />
  </div>
</div>
`;

exports[`CarouselItem renders correctly with given props 1`] = `
<div>
  <div
    class="carouselItem test-class"
  >
    <h2
      class="carouselItemTitle"
    >
      Title
    </h2>
    <h3
      class="carouselItemSubTitle"
    >
      Sub Title
    </h3>
    <img
      alt="Title"
      class="carouselItemImage"
      src="test image"
    />
  </div>
</div>
`;
